--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>Java script - przykłady z prezentacji</title>
 </head>
 <body>
-	<script src=""></script>
+
+
+
+	<script src="js/4-tablice-jako-zmienne.js"></script>
 </body>
 </html>
